RESOLVED FIXED160430
Freeze the last of the HTML Objective-C bindings
https://bugs.webkit.org/show_bug.cgi?id=160430
Summary Freeze the last of the HTML Objective-C bindings
Anders Carlsson
Reported 2016-08-01 15:39:17 PDT
Freeze the last of the HTML Objective-C bindings
Attachments
Patch (91.32 KB, patch)
2016-08-01 15:41 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2016-08-01 15:41:31 PDT
Anders Carlsson
Comment 2 2016-08-01 15:52:24 PDT
Note You need to log in before you can comment on or make changes to this bug.