Freeze the last of the HTML Objective-C bindings https://bugs.webkit.org/show_bug.cgi?id=160430

Reviewed by Tim Horton.

Also, remove a bunch of form validation related methods that were never exposed/used.

* DerivedSources.make:
* WebCore.xcodeproj/project.pbxproj:
* bindings/objc/DOMBlob.h: Added.
* bindings/objc/DOMBlob.mm: Added.
* bindings/objc/DOMBlobInternal.h: Added.
* bindings/objc/DOMDOMTokenList.h: Added.
* bindings/objc/DOMDOMTokenList.mm: Added.
* bindings/objc/DOMDOMTokenListInternal.h: Added.
* bindings/objc/DOMFile.h: Added.
* bindings/objc/DOMFile.mm: Added.
* bindings/objc/DOMFileInternal.h: Added.
* bindings/objc/DOMFileList.h: Added.
* bindings/objc/DOMFileList.mm: Added.
* bindings/objc/DOMFileListInternal.h: Added.
* bindings/objc/DOMHTMLButtonElement.mm:
* bindings/objc/DOMHTMLFieldSetElement.mm:
* bindings/objc/DOMHTMLInputElement.mm:
* bindings/objc/DOMHTMLInputElementPrivate.h:
* bindings/objc/DOMHTMLObjectElement.mm:
* bindings/objc/DOMHTMLSelectElement.mm:
* bindings/objc/DOMHTMLTextAreaElement.mm:
* bindings/objc/DOMHTMLTextAreaElementPrivate.h:
* bindings/objc/DOMMediaError.h: Added.
* bindings/objc/DOMMediaError.mm: Added.
* bindings/objc/DOMMediaErrorInternal.h: Added.
* bindings/objc/DOMTimeRanges.h: Added.
* bindings/objc/DOMTimeRanges.mm: Added.
* bindings/objc/DOMTimeRangesInternal.h: Added.

Canonical link: https://commits.webkit.org/178564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203993 268f45cc-cd09-0410-ab3c-d52691b4dbfc